# plugget

./: README.md  detect_app.py  pyproject.toml  requirements.txt  testcode.py
.github/workflows/: python-publish.yml
plugget/: __init__.py  _utils.py  commands.py  main.py  settings.py  testcode.py  utils.py
plugget/actions/: _copy_files.py  _max3ds_utils.py  _maya_utils.py  _requirements.py  _template.py  _utils.py  blender_addon.py  blender_module.py  blender_pip.py  blender_requirements.py  command.py  icons.py  krita_pip.py  krita_plugin.py  krita_requirements.py  max3ds_macroscript.py  max3ds_plugin.py  max3ds_requirements.py  max_icons.py  max_macroscript.py  max_maxscripts.py  max_requirements.py  maya_module.py  maya_plugin.py  maya_requirements.py  pip.py  pip_requirements.py  plugin.py  substance_painter_plugin.py  substance_painter_requirements.py  unreal_pip.py  unreal_plugin.py  unreal_requirements.py  unreal_utils.py
plugget/apps/: blender.py
plugget/commands/: __init__.py
plugget/data/: __init__.py  package.py  packages_meta.py
plugget/github/: __init__.py  async.py
plugget/gumroad/: __init__.py
plugget/resources/: config.ini  config.json
