[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["plugget"]


[project]
name = "plugget"
authors = [
    {name = "Hannes"},
]
description = "detect which app the python interpreter is running in"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["plugin", "addon", "add-on", "extension", "package", "manager", "resource", "studio", "dcc", "app", "application", "pipeline", "blender", "krita", "max"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"',
]
#dynamic = ["version"]
version = "0.0.1"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/plugget"
Source = "https://github.com/hannesdelbeke/plugget"